tests/agl/rejections/scope/loop_binding_escapes.agl
var n: int = 0
do[2]
  let probe = n + 1
  set n = probe
until probe >= 1
print probe
